<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Notify Me!</string>
    <string name="title_activity_edit_filter">List Editor</string>
    <string name="editor_app_chooser_title">Choose an app</string>
    <string name="editor_keywords_title">Keyword filter</string>
    <string name="editor_keywords_description">Only catch notifications that contain at least one of the following keywords or -phrases (one word/phrase per line):</string>
    <string name="editor_popup_title">Show popups</string>
    <string name="editor_popup_description">Show popups for notifications that this app spawns.</string>
    <string name="editor_aggressive_title">Aggressive popups</string>
    <string name="editor_aggressive_description">Allow popups to appear even if your screen is on and unlocked. This might interrupt your workflow, use this option wisely.</string>
    <string name="editor_expansion_title">Allow expansion</string>
    <string name="editor_expansion_description">Allow expansion of notifications that provide a bigger view.</string>
    <string name="editor_expanded_title">Expand by default</string>
    <string name="editor_expanded_description">Expand notifications with a bigger view as soon as their popup is displayed.</string>
    <string name="editor_lightup_title">Light up display</string>
    <string name="editor_lightup_description">Light up the display when this app spawns a notification.</string>
    <string name="editor_menu_apply">Exit saving changes</string>
    <string name="editor_menu_apply0">Exit adding item</string>
    <string name="editor_menu_discard">Exit discarding changes</string>
    <string name="editor_menu_discard0">Exit discarding item</string>
    <string name="editor_menu_remove">Remove item from list</string>
    <string name="editor_leave_toast">Press Back again to exit without saving. If that\'s not your intention, consider having a look at the options menu.</string>
    <string name="editor_nonsense_toast1">If you don\'t want to allow any action, you should rather exit without adding this app to the list.</string>
    <string name="editor_nonsense_toast2">If you don\'t want to allow any action for this app\'s notifications, you should rather remove it from the list.</string>
    <string name="title_activity_app_picker">App Picker</string>
    <string name="app_picker_retrieve">Retrieving app list&#8230;</string>
    <string name="app_picker_duplicate">This app is already in the list.</string>
    <string name="main_remove_title1">Remove</string>
    <string name="main_remove_title2">from list?</string>
    <string name="main_remove_ok">Remove</string>
    <string name="main_remove_cancel">Cancel</string>
    <string name="main_add_to_list">Add an app</string>
    <string name="main_check_checking">I don\'t know if the AccessibilityService is running, just let me check&#8230;</string>
    <string name="main_check_good_message">The AccessibilityService is running and Notify Me! can do its job.</string>
    <string name="main_check_good_button">Let\'s go!</string>
    <string name="main_check_bad_message">It seems that the AccessibilityService is not running. Please check that Notify Me! is enabled in Accessibility settings.</string>
    <string name="main_check_bad_message0">\nIf you feel like you\'ve been here before, you might experience a bug in Android that prevents an AccessibilityService from starting properly. Try disabling and re-enabling Notify Me! in Accessibility settings.</string>
    <string name="main_check_bad_button">Take me there!</string>
    <string name="main_menu_checkaccessibility">Check AccessibilityService</string>
    <string name="main_menu_popup">Popup preferences</string>
    <string name="main_menu_popup_background_title">Invert background color</string>
    <string name="main_menu_popup_background_description">If the popup\'s background color makes the notification\'s text unreadable, try inverting the background color.</string>
    <string name="main_menu_popup_timeout_title">Custom screen timeout</string>
    <string name="main_menu_popup_timeout_description">Set a timeout for the screen light after a popup has lit it up. If you leave the field empty or set the timeout 0, the system default timeout will be used.</string>
    <string name="main_menu_popup_interface_title">Slider interface</string>
    <string name="main_menu_popup_interface_description">Show a slider instead of buttons to interact with the popup.</string>
    <string name="main_menu_popup_color_description">Set the background color for the slider</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_help_message">Now that you are here, you should at least know what this app does. To serve its purpose, you need to provide a list of apps that are allowed to use Notify Me!\'s services. Do this by adding (\"Add an app\") or removing (long tap on an item or via the menu in its settings) apps to/from the list. You reach a list item\'s settings by just tapping it. If Notify Me! doesn\'t do as it\'s supposed to, have a look at the main screen\'s menu and try checking whether the AccessibilityService is running.</string>
    <string name="main_menu_help_title">How to use this app</string>
    <string name="main_menu_help_ok_button">Got it!</string>
    <string name="main_menu_help_question_button">There\'s a question left&#8230;</string>
    <string name="main_menu_about">About this app</string>
    <string name="main_menu_about_message">An app to enhance Android&#8482;\'s abilities to show notifications.\nCopyright &#169; 2013 Tom Kranz\nThis program comes with ABSOLUTELY NO WARRANTY. This is free software, and you are welcome to redistribute it under the conditions of the GPLv3 or (at your option) later versions; visit <a href="http://www.gnu.org/licenses/">gnu.org/licenses</a> for details.\nAndroid is a trademark of Google Inc.</string>
    <string name="main_menu_about_title">About Notify Me!</string>
    <string name="main_menu_about_ok_button">Okay, cool thing</string>
    <string name="notification_view_button">View</string>
    <string name="notification_dismiss_button">Dismiss</string>
    <string name="notification_collapse_button">Collapse</string>
    <string name="notification_expand_button">Expand</string>
    <string name="accessibility_service_description">Enable this service to use Notify Me!. Otherwise it would not be able to register any notifications, which would render the app useless.</string>
    <drawable name="transparent">#00000000</drawable>

</resources>