<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp" >
    <RelativeLayout 
        android:id="@+id/main_menu_popup_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <CheckBox 
            android:id="@+id/main_menu_popup_background_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <LinearLayout 
            android:id="@+id/main_menu_popup_background_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/main_menu_popup_background_checkbox"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_popup_background_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_popup_background_description" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/main_menu_popup_interface"
        android:layout_below="@id/main_menu_popup_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp">
        
        <CheckBox 
            android:id="@+id/main_menu_popup_interface_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <LinearLayout 
            android:id="@+id/main_menu_popup_interface_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/main_menu_popup_interface_checkbox"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_popup_interface_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_menu_popup_interface_description" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
</ScrollView>