<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="clip_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditFilterActivity" >

    <RelativeLayout
        android:id="@+id/editor_app_chooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:onClick="chooseApp" >

        <ImageView
            android:id="@+id/editor_app_chooser_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_add"
            android:onClick="chooseApp" />

        <ImageView
            android:id="@+id/editor_chosen_app_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="chooseApp" />

        <TextView
            android:id="@+id/editor_chosen_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:layout_marginRight="6dp"
            android:layout_toLeftOf="@id/editor_chosen_app_icon"
            android:layout_toRightOf="@id/editor_app_chooser_button"
            android:gravity="right"
            android:onClick="chooseApp" />
    </RelativeLayout>

    <RelativeLayout 
        android:id="@+id/editor_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editor_app_chooser"
        android:layout_marginTop="6dp">
        
        <CheckBox 
            android:id="@+id/editor_popup_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="checkThePopupBox"/>

        <LinearLayout 
            android:id="@+id/editor_popup_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="checkThePopupBox"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/editor_popup_checkbox"
            android:addStatesFromChildren="true"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_popup_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_popup_description" />
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/editor_expansion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editor_popup"
        android:layout_marginTop="6dp">
        
        <CheckBox 
            android:id="@+id/editor_expansion_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="checkTheExpansionBox"/>

        <LinearLayout 
            android:id="@+id/editor_expansion_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="checkTheExpansionBox"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/editor_expansion_checkbox"
            android:addStatesFromChildren="true"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_expansion_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_expansion_description" />
        </LinearLayout>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/editor_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editor_expansion"
        android:layout_marginTop="6dp" >

        <CheckBox
            android:id="@+id/editor_keywords_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="checkTheKeywordsBox" />

        <LinearLayout 
            android:id="@+id/editor_keywords_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="checkTheKeywordsBox"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/editor_keywords_checkbox"
            android:addStatesFromChildren="true"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_keywords_title"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_keywords_description" />
        </LinearLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/editor_keywords_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editor_keywords" />

</RelativeLayout>
</ScrollView>